Sign up, tools, cEffect, colors and inicio mobile

--- a/index.html
+++ b/index.html
@@ -41,13 +41,8 @@
                 <div class="main-inicio-first__action">
                     <div class="main-inicio-first__action--container">
                         <a href="./pages/home.html">
-                            <p>Let's start!</p>
+                            <p>Start your journey!</p>
                         </a>
-                    </div>
-                </div>
-                <div class="main-inicio-first__image">
-                    <div class="main-inicio-first__image--container">
-                        <img class="main-inicio-first__image--img" src="./images/girlEdited.jpg" alt="">
                     </div>
                 </div>
             </div>
