--- a/pages/home.html
+++ b/pages/home.html
@@ -42,7 +42,7 @@
                     </lord-icon></a>
                 </div>
                 <div class="header-home__end--tool end__btn">
-                    <a href=""><lord-icon
+                    <a href="./tools.html"><lord-icon
                         src="https://cdn.lordicon.com/svbmmyue.json" colors="primary:#00008b" trigger="hover" style="width:25px;height:25px;top:2px;">
                     </lord-icon></a>
                 </div>
@@ -78,26 +78,26 @@
                         </lord-icon></i></a>
                         <p>Habits & Productivity</p>
                     </li>
-                    <li class="aside-home__li aside-home__li--productivity">
+                    <li class="aside-home__li aside-home__li--money">
                         <a href=""><lord-icon
                             src="https://cdn.lordicon.com/rzsdhkun.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                         </lord-icon></i></a>
                         <p>Money & Finance</p>
                     </li>
-                    <li class="aside-home__li aside-home__li--productivity">
+                    <li class="aside-home__li aside-home__li--skillset">
                         <a href=""><lord-icon
                             src="https://cdn.lordicon.com/hbigeisx.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                         </lord-icon></i></a>
                         <p>Skillset Enhancement</p>
                     </li>
-                    <li class="aside-home__li aside-home__li--productivity">
+                    <li class="aside-home__li aside-home__li--happiness">
                         <a href=""><lord-icon
                             src="https://cdn.lordicon.com/fbdgkenc.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                         </lord-icon></i></a>
                         <p>Happiness & Success</p>
                         <!-- Mindset will be here too -->
                     </li>
-                    <li class="aside-home__li aside-home__li--productivity">
+                    <li class="aside-home__li aside-home__li--business">
                         <a href=""><lord-icon
                             src="https://cdn.lordicon.com/bewubbww.json" trigger="hover" colors="primary:#00008b" style="width:25px;height:25px">
                         </lord-icon></i></a>
