--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CSS -->
     <link rel="stylesheet" href="../styles/style.css">
+    <!-- Font Family -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8f5c9daf85.js" crossorigin="anonymous"></script>
     <title>Developing our Self</title>
 </head>
 <body>
@@ -29,39 +33,31 @@
                 </div>
             </div>
             <div class="main-Sign__container">
-                <form class="main-Sign__form">
+                <form action="/login" method="POST" class="main-Sign__form">
                     <h2 class="main-Sign__form--h2">Hey, hello &#128075</h2><!--how to add an emoji-->
-                    <p class="main-Sign__form--description">Enter the information you entered while registering</p>
+                    <p class="main-Sign__form--description">Enter your information and your preferences</p>
+                    <label for="" class="main-Sign__label main-Sign__label--name">Full Name</label>
+                    <input class="main-Sign__input main-Sign__input--name" type="text" placeholder="" required >
                     <label for="" class="main-Sign__label main-Sign__label--email">Email</label>
-                    <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="">
+                    <input class="main-Sign__input main-Sign__input--email" type="email" placeholder="" required >
                     <label for="" class="main-Sign__label  main-Sign__label--password">Password</label>
-                    <input class="main-Sign__input main-Sign__input--password" type="password" placeholer="Type your password">
-                    <div class="main-Sign__help">
-                        <p>Remember me</p>
-                        <a class="main-Sign__forgot" href="#">
-                            <p>Forgot password?</p>
-                        </a>
+                    <div class="main-Sign__password--container">
+                        <input class="main-Sign__input main-Sign__input--password" required type="password" placeholer="Type your password">
+                        <i class="fa-regular fa-eye" id="show-password"></i>
                     </div>
-                    <input class="main-Sign__input main-Sign--btn" type="button" value="LOGIN">
-                    <div class="main-Sign__divisor">
-                        <div class="main-Sign__divisor-side main-Sign__divisor-side--left"><hr></div>
-                            <p class="main-Sign__other-option">or Sign in using</p>
-                        <div class="main-Sign__divisor-side main-Sign__divisor-side--right"><hr></div>
-                    </div>
-                    <ul class="main-Sign__social-media">
-                        <li>
-                            <a class="main-Sign__social-media--facebook" href="#" target="_blank">
-                                <i class="fa-brands fa-facebook"></i>
-                            </a>
-                        </li><!--logos-->
-                        <li><a class="main-Sign__social-media--twitter" href="#"><i class="fa-brands fa-twitter"></i></a></li>
-                        <li><a class="main-Sign__social-media--google" href="#"><i class="fa-brands fa-google"></i></a></li>
-                    </ul>
-                    <a class="main-Sign__create-account" href="#">Create account</a>
+                    <label for="" class="main-Sign__label  main-Sign__label--language">Language</label>
+                    <select name="" id="" required class="main-Sign__input main-Sign__input--language">
+                        <option value="" hidden></option>
+                        <option value="English">English</option>
+                        <option value="Spanish">Spanish</option>
+                    </select>
+                    <a href="./home.html">
+                        <input class="main-Sign__input main-Sign--btn" type="submit" value="NEXT">
+                    </a>
                     </form>
             </div>
         </main>
     </div>
-    <script src=""></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
